--- a/6_obsession/page11.html
+++ b/6_obsession/page11.html
@@ -6,6 +6,51 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+	<div class="head">
+		<a href="index.html" style="color: white; font-family: helvetica; font-weight: bold;"> SYNONYM </a>
+	</div>
+	
+	<div class="movietitle">Mother</div>
+
+	<div class="centeredposter"> 
+		<p style="text-align: center;"> <img src="assets/imgs/11_1_Mother.jpg" alt="Korean Version" style="width: 50%;"> </p>
+	</div>
+
+	<br>
+	<br>
+
+	<div class="flex">
+		<img class="poster margin" src="assets/imgs/11_1_Mother.jpg" alt="Korean Version"> 
+		<img class="poster" src="assets/imgs/11_2.jpg" alt="Foriegn Version"> 
+	</div>
+
+	<br>
+	<br>
+	<br>
+
+	<div class="white">
+		<h3 class="bold"> Title </h3>
+		<p class="regular">Mother</p>
+		<br>
+		<h3 class="bold"> Director </h3>
+		<p class="regular">Bong Joon-ho</p>	
+		<br>
+		<h3 class="bold"> Summary </h3>
+		<p class="regular"> 
+			An unnamed widow lives alone with her only son, selling medicinal herbs in a small town in southern South Korea while conducting unlicensed acupuncture to the town's women on the side. Her son Yoon Do-joon is shy, but prone to attack anyone who mocks his intellectual disability. She dotes on him and scolds him for hanging out with Jin-tae, a local ne'er-do-well. When Do-joon is nearly hit by a car, he and Jin-tae vandalize the car and attack the driver and passengers as revenge. Jin-tae blames Do-joon for the damage done to the car, and Do-joon is sued. The debt causes Mother to struggle.
+		</p>
+		<br>
+		<h3 class="bold"> Posters </h3>
+		<p class="regular"> The Korean version  </p>
+	</div>
+
+	<div class="next">
+		<a href="page12.html"></a>
+	</div>
+
+	<div class="back">
+		<a href="page10.html"></a>
+	</div>
 
 </body>
 </html>
