--- a/6_obsession/page12.html
+++ b/6_obsession/page12.html
@@ -6,6 +6,51 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+	<div class="head">
+		<a href="index.html" style="color: white; font-family: helvetica; font-weight: bold;"> SYNONYM </a>
+	</div>
+	
+	<div class="movietitle">Oasis</div>
 
+	<div class="centeredposter"> 
+		<p style="text-align: center;"> <img src="assets/imgs/12_1_Oasis.jpg" alt="Korean Version" style="width: 50%;"> </p>
+	</div>
+
+	<br>
+	<br>
+
+	<div class="flex">
+		<img class="poster margin" src="assets/imgs/12_1_Oasis.jpg" alt="Korean Version"> 
+		<img class="poster margin" src="assets/imgs/12_2_Japanese.jpg" alt="Foriegn Version"> 
+		<img class="poster" src="assets/imgs/12_3.jpg" alt="Foriegn Version"> 
+	</div>
+
+	<br>
+	<br>
+	<br>
+
+	<div class="white">
+		<h3 class="bold"> Title </h3>
+		<p class="regular">Oasis</p>
+		<br>
+		<h3 class="bold"> Director </h3>
+		<p class="regular">Lee Chang-dong</p>	
+		<br>
+		<h3 class="bold"> Summary </h3>
+		<p class="regular"> 
+			Upon his release from prison, Hong Jong-du (Sol Kyung-gu) goes looking for his relatives in Seoul. His brothers have moved and neither they and nor their mother are aware Jong-du is back on the streets after serving a three-year prison term for a hit-and-run accident. He quickly discovers that during his absence his family has moved without telling him. Oblivious to society's rules, Jong-du again ends up in police custody for non-payment of a restaurant bill. He is bailed out by his younger brother Jong-sae (Ryoo Seung-wan) and reunited with his estranged family who reluctantly take him back in. Slightly mentally disabled and an incurable social misfit, Jong-du is hired as a delivery boy for a neighborhood Chinese restaurant on the recommendation of his older brother Jong-il (Ahn Nae-sang).
+		</p>
+		<br>
+		<h3 class="bold"> Posters </h3>
+		<p class="regular"> The Korean version  </p>
+	</div>
+
+	<div class="next">
+		<a href="page13.html"></a>
+	</div>
+
+	<div class="back">
+		<a href="page11.html"></a>
+	</div>
 </body>
 </html>
