--- a/6_obsession/page13.html
+++ b/6_obsession/page13.html
@@ -6,6 +6,53 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+	<div class="head">
+		<a href="index.html" style="color: white; font-family: helvetica; font-weight: bold;"> SYNONYM </a>
+	</div>
+	
+	<div class="movietitle">Obsessed</div>
 
+	<div class="centeredposter"> 
+		<p style="text-align: center;"> <img src="assets/imgs/13_1_Obsessed.jpg" alt="Korean Version" style="width: 50%;"> </p>
+	</div>
+
+	<br>
+	<br>
+
+	<div class="flex">
+		<img class="poster margin" src="assets/imgs/13_1_Obsessed.jpg" alt="Korean Version"> 
+		<img class="poster" src="assets/imgs/13_2_Japanese.jpg" alt="Foriegn Version"> 
+	</div>
+
+	<br>
+	<br>
+	<br>
+
+	<div class="white">
+		<h3 class="bold"> Title </h3>
+		<p class="regular">Obsessed</p>
+		<br>
+		<h3 class="bold"> Director </h3>
+		<p class="regular">Kim Dae-woo</p>	
+		<br>
+		<h3 class="bold"> Summary </h3>
+		<p class="regular"> 
+			Decorated war hero Colonel Kim Jin-pyong is on the verge of his promotion to general. From his commander father-in-law to beautiful wife, Jin-pyong is the subject of much envy and jealousy. But his affection for his wife has subsided a long ago, and due to post-traumatic disorder from Vietnam War, he suffers mental breakdowns and nightmares of the fallen soldiers under his command.
+			<br>
+			<br>
+			One day, Captain Kyung Woo-jin is transferred to Jin-pyong’s army and he moves into next door with his wife Ga-heun. Jin-pyong encounters Ga-heun and instantly falls in love with her. He has never felt this emotion in his life and is confused by it. He is later invited to an event at an army hospital organized by the wives of commissioned officers, where they volunteer. A patient suffering from PTDS attacks Ga-heun, and Jin-pyong jumps in to help her. He saves her from the patient, but she gets shot in the process and is admitted to the hospital. She begins to develop cordial feelings for Jin-pyong for risking his own life to save her from the vicious attack.
+		</p>
+		<br>
+		<h3 class="bold"> Posters </h3>
+		<p class="regular"> The Korean version  </p>
+	</div>
+
+	<div class="next">
+		<a href="page14.html"></a>
+	</div>
+
+	<div class="back">
+		<a href="page12.html"></a>
+	</div>
 </body>
 </html>
