--- a/6_obsession/page14.html
+++ b/6_obsession/page14.html
@@ -6,6 +6,50 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+	<div class="head">
+		<a href="index.html" style="color: white; font-family: helvetica; font-weight: bold;"> SYNONYM </a>
+	</div>
+	
+	<div class="movietitle">Ode To My Father</div>
 
+	<div class="centeredposter"> 
+		<p style="text-align: center;"> <img src="assets/imgs/14_1_OdeToMyFather.jpg" alt="Korean Version" style="width: 50%;"> </p>
+	</div>
+
+	<br>
+	<br>
+
+	<div class="flex">
+		<img class="poster margin" src="assets/imgs/14_1_OdeToMyFather.jpg" alt="Korean Version"> 
+		<img class="poster" src="assets/imgs/14_2.jpg" alt="Foriegn Version"> 
+	</div>
+
+	<br>
+	<br>
+	<br>
+
+	<div class="white">
+		<h3 class="bold"> Title </h3>
+		<p class="regular">Ode To My Father</p>
+		<br>
+		<h3 class="bold"> Director </h3>
+		<p class="regular">Yoon Je-kyoon</p>	
+		<br>
+		<h3 class="bold"> Plot </h3>
+		<p class="regular"> 
+			During the Hungnam Evacuation of 1950 in the Korean War, when thousands of refugees in what would become North Korea were transported south by U.S. Navy boats, a child, Deok-soo, loses track of his sister, Mak-soon. Because of this, Deok-soo's father stays behind to search for her, telling his son to take the boy's mother and two younger siblings to the port city of Busan, where Deok-soo's aunt runs an imported goods store. Before leaving Deok-soo and the rest of his family, the father makes his Deok-soo promise to be the head of the household in his place.
+		</p>
+		<br>
+		<h3 class="bold"> Posters </h3>
+		<p class="regular"> The Korean version  </p>
+	</div>
+
+	<div class="next">
+		<a href="page15.html"></a>
+	</div>
+
+	<div class="back">
+		<a href="page13.html"></a>
+	</div>
 </body>
 </html>
