--- a/6_obsession/page15.html
+++ b/6_obsession/page15.html
@@ -6,6 +6,50 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+	<div class="head">
+		<a href="index.html" style="color: white; font-family: helvetica; font-weight: bold;"> SYNONYM </a>
+	</div>
+	
+	<div class="movietitle">Office</div>
 
+	<div class="centeredposter"> 
+		<p style="text-align: center;"> <img src="assets/imgs/15_1_Office.jpg" alt="Korean Version" style="width: 50%;"> </p>
+	</div>
+
+	<br>
+	<br>
+
+	<div class="flex">
+		<img class="poster margin" src="assets/imgs/15_1_Office.jpg" alt="Korean Version"> 
+		<img class="poster" src="assets/imgs/15_2.jpeg" alt="Foriegn Version"> 
+	</div>
+
+	<br>
+	<br>
+	<br>
+
+	<div class="white">
+		<h3 class="bold"> Title </h3>
+		<p class="regular">Office</p>
+		<br>
+		<h3 class="bold"> Director </h3>
+		<p class="regular">Hong Won-chan</p>	
+		<br>
+		<h3 class="bold"> Plot </h3>
+		<p class="regular"> 
+			Office is a slasher-thriller film. It is about a detective trying to figure out why a mild-mannered man has killed his family and is targeting his co-workers. The film premiered at the Midnight Screenings section of the 2015 Cannes Film Festival.
+		</p>
+		<br>
+		<h3 class="bold"> Posters </h3>
+		<p class="regular"> The Korean version  </p>
+	</div>
+
+	<div class="next">
+		<a href="page16.html"></a>
+	</div>
+
+	<div class="back">
+		<a href="page14.html"></a>
+	</div>
 </body>
 </html>
