--- a/6_obsession/page16.html
+++ b/6_obsession/page16.html
@@ -6,6 +6,51 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+	<div class="head">
+		<a href="index.html" style="color: white; font-family: helvetica; font-weight: bold;"> SYNONYM </a>
+	</div>
+	
+	<div class="movietitle">Oldboy</div>
+
+	<div class="centeredposter"> 
+		<p style="text-align: center;"> <img src="assets/imgs/16_1_Oldboy.jpg" alt="Korean Version" style="width: 50%;"> </p>
+	</div>
+
+	<br>
+	<br>
+
+	<div class="flex">
+		<img class="poster margin" src="assets/imgs/16_1_Oldboy.jpg" alt="Korean Version"> 
+		<img class="poster margin" src="assets/imgs/16_2.jpg" alt="Foriegn Version"> 
+		<img class="poster" src="assets/imgs/16_3.jpg" alt="Foriegn Version"> 
+	</div>
+	<br>
+	<br>
+	<br>
+
+	<div class="white">
+		<h3 class="bold"> Title </h3>
+		<p class="regular">Oldboy</p>
+		<br>
+		<h3 class="bold"> Director </h3>
+		<p class="regular">Park Chan-wook</p>	
+		<br>
+		<h3 class="bold"> Plot </h3>
+		<p class="regular"> 
+			The film follows the story of Oh Dae-su, who is imprisoned in a cell which resembles a hotel room for 15 years without knowing the identity of his captor or his captor's motives. When he is finally released, Dae-su finds himself still trapped in a web of conspiracy and violence. His own quest for vengeance becomes tied in with romance when he falls in love with an attractive young female sushi chef.
+		</p>
+		<br>
+		<h3 class="bold"> Posters </h3>
+		<p class="regular"> The Korean version  </p>
+	</div>
+
+	<div class="next">
+		<a href="page17.html"></a>
+	</div>
+
+	<div class="back">
+		<a href="page15.html"></a>
+	</div>
 
 </body>
 </html>
