--- a/6_obsession/page17.html
+++ b/6_obsession/page17.html
@@ -6,6 +6,59 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+	<div class="head">
+		<a href="index.html" style="color: white; font-family: helvetica; font-weight: bold;"> SYNONYM </a>
+	</div>
+	
+	<div class="movietitle">Poetry</div>
+
+	<div class="centeredposter"> 
+		<p style="text-align: center;"> <img src="assets/imgs/17_1_Poetry.jpg" alt="Korean Version" style="width: 50%;"> </p>
+	</div>
+
+	<br>
+	<br>
+
+	<div class="flex">
+		<img class="poster margin" src="assets/imgs/17_1_Poetry.jpg" alt="Korean Version"> 
+		<img class="poster" src="assets/imgs/17_2.jpg" alt="Foriegn Version"> 
+	</div>
+	<br>
+	<br>
+	<br>
+
+	<div class="white">
+		<h3 class="bold"> Title </h3>
+		<p class="regular">Poetry</p>
+		<br>
+		<h3 class="bold"> Director </h3>
+		<p class="regular">Lee Chang-dong</p>	
+		<br>
+		<h3 class="bold"> Plot </h3>
+		<p class="regular"> 
+			The movie opens on a river scene with children playing on the bank. The body of a girl in a school uniform floats by.
+			<br>
+			<br>
+			Yang Mi-ja, a 66-year-old grandmother, consults a doctor at a hospital who is concerned about her forgetfulness, referring her to a specialist. As she leaves the hospital she sees a woman crazy with grief because her 16-year-old daughter has drowned.
+			<br>
+			<br>
+			Though Mi-ja lives on government welfare, she has a small job taking care of a well-to-do elderly man who has had a stroke. At home, she cares for her ill-mannered 16-year-old grandson, Jong-wook (Lee David), whose divorced mother lives in Busan. When Mi-ja asks Wook about the girl from his class who drowned, Wook insists that he doesn't know her.
+			<br>
+			<br>
+			When Mi-ja notices a poster advertising a poetry class at a local community center, she decides to enroll. The course assignment is to write one poem by the end of the month-long course. At the suggestion of her teacher, she begins writing notes about the things she sees, especially flowers.
+		</p>
+		<br>
+		<h3 class="bold"> Posters </h3>
+		<p class="regular"> The Korean version  </p>
+	</div>
+
+	<div class="next">
+		<a href="page18.html"></a>
+	</div>
+
+	<div class="back">
+		<a href="page16.html"></a>
+	</div>
 
 </body>
 </html>
