--- a/6_obsession/page18.html
+++ b/6_obsession/page18.html
@@ -6,6 +6,53 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+	<div class="head">
+		<a href="index.html" style="color: white; font-family: helvetica; font-weight: bold;"> SYNONYM </a>
+	</div>
+	
+	<div class="movietitle">Sector 7</div>
+
+	<div class="centeredposter"> 
+		<p style="text-align: center;"> <img src="assets/imgs/18_1_Sector7.jpg" alt="Korean Version" style="width: 50%;"> </p>
+	</div>
+
+	<br>
+	<br>
+
+	<div class="flex">
+		<img class="poster margin" src="assets/imgs/18_1_Sector7.jpg" alt="Korean Version"> 
+		<img class="poster" src="assets/imgs/18_2.jpg" alt="Foriegn Version"> 
+	</div>
+	<br>
+	<br>
+	<br>
+
+	<div class="white">
+		<h3 class="bold"> Title </h3>
+		<p class="regular">Sector 7</p>
+		<br>
+		<h3 class="bold"> Director </h3>
+		<p class="regular">Kim Ji-hoon</p>	
+		<br>
+		<h3 class="bold"> Plot </h3>
+		<p class="regular"> 
+			A small team of oil rig workers are searching for undiscovered oil at the oil rig Sector 7, off the coast of Jeju Island. After the tension builds from countless failures, the main character Hae-joon's uncle returns with the hope of searching the untapped wells of oil. What they don't realize is that he has a much different motive. Working together with a researcher on board the rig, he plans to breed a newly discovered life-form whose bodily fluids can burn for longer than 30 hours, as a new form of fuel instead of oil.
+			<br>
+			<br>
+			But tragedy strikes as the specimen escapes with deaths of the researcher, the doctor, and another worker to follow. With the loss of the main power, the workers become stranded as the creature begins to hunt for its next meal. Armed with nothing but a few guns and the knowledge of the creature's minor susceptibility to flame, the remaining workers must work together to kill the beast before it hunts them down one by one, and escape the oil rig. But with its incredible speed (despite its size), its lightning fast, spear-like tongue, and its nearly impenetrable hide, they may not stand a chance.
+		</p>
+		<br>
+		<h3 class="bold"> Posters </h3>
+		<p class="regular"> The Korean version  </p>
+	</div>
+
+	<div class="next">
+		<a href="page19.html"></a>
+	</div>
+
+	<div class="back">
+		<a href="page17.html"></a>
+	</div>
 
 </body>
 </html>
